# serf

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md  build.rs
.github/workflows/: rust.yml
config_/: usr_
install/unix/: install.sh
install/win/: install.bat
src/: lib.rs
src/cli/: util.rs
src/core/: db.rs  error.rs  mod.rs  queries.rs  state.rs  util.rs
src/core/constants/: cli.rs  errors.rs  mod.rs  queries.rs
src/proto/: claims_util.proto  request.proto
src/tests/: core.rs  integration.rs  mod.rs  unit.rs  web.rs
src/web/: jwt.rs  mod.rs  proto.rs  request.rs  util.rs
src/web/controller/: database.rs  health.rs  mod.rs  protobuf.rs  token_test.rs
tests/: core.rs  mod.rs  web.rs  web_util.rs
