[package]
name = "sqlite_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "sqlite_server_srv"
path = "src/bin/sqlite_server_srv.rs"

[[bin]]
name = "sqlite_server_cli"
path = "src/bin/sqlite_server_cli.rs"

[dependencies]
actix-web = "4.9.0"
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = "0.4.39"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
notify = "8.0.0"
papaya = "0.1.7"
rbase64 = "2.0.3"
regex = { version = "1.11.1", features = ["std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "json"] }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }

[build-dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
sha2 = "0.10.8"
