[package]
name = "serf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "serf"
path = "src/bin/serf.rs"

[[bin]]
name = "serf-cli"
path = "src/bin/serf-cli.rs"

[dependencies]
actix-web = "4.10.2"
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = "0.4.40"
futures = "0.3.31"
hmac = "0.12.1"
mime = "0.3.17"
mockall = "0.13.1"
notify = "8.0.0"
papaya = "0.2.1"
prost = "0.13.5"
regex = { version = "1.11.1", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "json"] }
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread"] }

[build-dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
prost-build = "0.13.5"
protoc-bin-vendored = "3.1.0"
sha2 = "0.10.8"
